force-app/main/default/objects/PDRI__Test_Result__c/PDRI__Test_Result__c.object-meta.xml
<CustomObject>
    <label>Test Result</label>
    <nameField>
        <label>Test Result Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>