force-app/main/default/objects/PDRI__Test_Result__c/fields/PDRI__Error_Message__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Error_Message__c</fullName>
    <label>Error Message</label>
    <type>TextArea</type>
</CustomField>