force-app/main/default/objects/PDRI__Test_Result__c/fields/PDRI__Method_Name__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Method_Name__c</fullName>
    <label>Method Name</label>
    <type>TextArea</type>
</CustomField>