force-app/main/default/objects/PDRI__Test_Result__c/fields/PDRI__StackTrace__c.field-meta.xml
<CustomField>
    <fullName>PDRI__StackTrace__c</fullName>
    <label>Stack Trace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>