force-app/main/default/objects/PDRI__Test_Result__c/fields/PDRI__Test_Result__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Test_Result__c</fullName>
    <label>Test Result</label>
    <length>80</length>
    <type>Text</type>
</CustomField>